# viking-chess

./: README.md  example.txt
src/: .clang-format  Board.cpp  Board.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Evaluation.cpp  Evaluation.hpp  Game.cpp  Game.hpp  Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  MoveList.cpp  MoveList.hpp  PVTable.cpp  PVTable.hpp  Search.cpp  Search.hpp  TTable.cpp  TTable.hpp  UCI.cpp  UCI.hpp  Uci.cpp  Uci.hpp  globals.cpp  globals.hpp  main.cpp
src/tests/: board_tests.cpp  evaluation_tests.cpp  move_gen_tests.cpp  move_tests.cpp  perft_tests.cpp  search_tests.cpp
